data/derived/sp14/progs/unify/prog3428.ml.out
Characters 73-74:
  | Sine s -> Format.sprintf "%expr" s;;
                                     ^
Error: This expression has type expr but an expression was expected of type
         float
